--- a/cofig.ini
+++ b/cofig.ini
@@ -21,10 +21,10 @@ zhandaye_stage_sign=314207
 zhandaye_stage_error=2
 
 [redis]
-host = forlorn.site
-password = IVmyaHYpDaEuxFEl
-port = 3116
-db=11
+host = 1
+password = 2
+port = 3
+db=4
 
 [scheduler]
 main_thread_pool_size=20
